Add Google Analytics Tracking ID

--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ url-pretty: "arjunnayini.com"  # eg. "deanattali.com/beautiful-jekyll"
 #gtag: ""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-129404621-1"
 
 # Google Tag Manager ID
 #gtm: ""
